# -_PREPARE

./: README.md
LangQiaoBei_C_Team/2019_C++_Team/: CMakeLists.txt
LangQiaoBei_C_Team/2019_C++_Team/maximum_rainfall/: maximun_rainfall.cpp  work.md
LangQiaoBei_C_Team/2019_C++_Team/prime_number/: prime_number.cpp  work.md
LangQiaoBei_C_Team/2019_C++_Team/summtion/: summtion.cpp  work.md
LangQiaoBei_C_Team/2019_C++_Team/year_of_number_transform_char/: work.md  year_of_number_transform_char.cpp
Study/Chapter one/: CMakeLists.txt  explain
Study/Chapter one/exercise/: average.cpp
