cmake_minimum_required(VERSION 3.17)
project(2019_C___Team)

set(CMAKE_CXX_STANDARD 14)

add_executable(2019_C___Team main.cpp)
add_executable(summtion summtion/summtion.cpp)
add_executable(year_of_number_transform_char year_of_number_transform_char/year_of_number_transform_char.cpp)
add_executable(prime_number prime_number/prime_number.cpp)
add_executable(maximun_rainfall maximum_rainfall/maximun_rainfall.cpp)